UF-11407: Fix 400 responses
